--- a/experiments/modelling.ipynb
+++ b/experiments/modelling.ipynb
@@ -41,6 +41,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    76518.000000\n",
+       "mean        22.278653\n",
+       "std          6.889241\n",
+       "min         17.000000\n",
+       "25%         18.000000\n",
+       "50%         19.000000\n",
+       "75%         23.000000\n",
+       "max         70.000000\n",
+       "Name: Age at enrollment, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train['Age at enrollment'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -3249,7 +3277,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Academic",
    "language": "python",
    "name": "python3"
   },
